Shift timezone functions, specify offset applied

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -4,5 +4,8 @@ export(cavity_detect)
 export(cavity_plot)
 export(cavity_split)
 export(sun_detect)
+export(tz_apply_offset)
+export(tz_find_offset)
+export(tz_remove_offset)
 importFrom(dplyr,"%>%")
 importFrom(rlang,.data)
