--- a/NAMESPACE
+++ b/NAMESPACE
@@ -8,4 +8,8 @@ export(tz_apply_offset)
 export(tz_find_offset)
 export(tz_remove_offset)
 importFrom(dplyr,"%>%")
+importFrom(rlang,":=")
 importFrom(rlang,.data)
+importFrom(rlang,.env)
+importFrom(rlang,as_label)
+importFrom(rlang,as_name)
