--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,7 +1,7 @@
 Package: cavityuse
 Type: Package
 Title: Detecting Cavity Use From Geolocator Data
-Version: 0.1.0
+Version: 0.5.0
 Authors@R: c(person("Steffi", "LaZerte", email = "steffi@steffi.ca", role = c("aut","cre"), comment = "https://orcid.org/0000-0002-7690-8360"))
 Description:
     Calculate patterns of cavity use from geolocator light data. Patterns of 
@@ -17,16 +17,19 @@ Depends:
     R (>= 3.2)
 Imports:
     broom (>= 0.4.3),
-    dplyr (>= 0.7.0),
-    ggplot2(>= 2.2.1),
+    dplyr (>= 1.0.0),
+    ggplot2 (>= 2.2.1),
+    glue (>= 1.6.2),
     lubridate (>= 1.5.6),
-    magrittr (>= 1.5),
+    lutz (>= 0.3.1),
     maptools (>= 0.9.3),
     purrr (>= 0.2.5),
-    rlang (>= 0.2.0),
+    rlang (>= 0.4.11),
     stringr (>= 1.3.1),
-    tibble (>= 1.2),
     tidyr (>= 0.4.1)
-Suggests: testthat,
-    covr
-RoxygenNote: 7.1.1
+Suggests: 
+    testthat,
+    covr,
+    roxygen2,
+    sf
+RoxygenNote: 7.2.0
